Fixed text not showing in datedropdown

--- a/project/PortCDM/PortCDM/Style/StyleSheet.css
+++ b/project/PortCDM/PortCDM/Style/StyleSheet.css
@@ -768,6 +768,7 @@ body {
     -webkit-appearance: menulist;
     padding: .75rem 1.5rem .75rem 1rem;
     width: 100%;
+    min-width: 100px;
     color: #018abd;
     border: #018abd 1px solid;
     background-color: rgba(256, 256, 256, 0.5);
